--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         /* --- Custom Font Loading --- */
         @font-face {
             font-family: 'Redcollar';
-            src: url('assets/fonts/Redcollar_Regular.woff2') format('woff2'); /* Assumes .woff2 format */
+            src: url('assets/fonts/Redcollar.woff2') format('woff2'); /* Assumes .woff2 format */
             font-weight: normal;
             font-style: normal;
         }
